`utils_MCMCcppRegNoSpikes.cpp`.

version 1.5.27 (2019-04-08)
- Edits `BASiCS_TestDE` to avoid low posterior probability thresholds derived 
from the EFDR calibration. This alters some of the related 'Hidden' functions. 
- In `BASiCS_TestDE`, default values for `EFDR_M`, `EFDR_D` and `EFDR_R` 
were changed to 0.05. 
- Unit tests updated accordingly

version 1.5.28 (2019-04-09)
- Edited version of `BASiCS_Sim` to allow no spikes and multiple batches
- Documentation updated accordingly

version 1.5.29 (2019-04-10)
- Unit test associated to `BASiCS_Sim` updated to use a fixed seed and to
check exact values being reproducible

version 1.5.30 (2019-04-11)
- `BASiCS_effectiveSize` has been created as a wrapper of `coda::effectiveSize`.
This is to resolve issues when `Param = 'epsilon'` as it contains `NA` for very
lowly expressed genes that are excluded from the mean/over-dispersion trend.

version 1.5.31 (2019-04-15)
- Updated vignette to include ERCC calculation

version 1.5.32 (2019-04-17)
- Minor change in `BASiCS_MCMC` to avoid storing adaptive variances in the
`BASiCS_Chain` object when `StoreAdapt = TRUE`. 
- New unit test to ensure the correct output in `BASiCS_Chain@parameters`
- Minor change in `Summary` method for `BASiCS_Chain` class to avoid calculating 
posterior summaries when `designMatrix` is part of the `parameters` slot
- Added `return` to the docummentation of `BASiCS_effectiveSize`. 

version 1.5.33 (2019-04-19)
- Updated ERCC formula in the vignette.

version 1.5.34 (2019-04-20)
- Fixes typo in vignette

version 1.7.1 (2019-07-27)
- `is_true` deprecated in `testthat`. Unit tests updated to use `expect_true`

version 1.7.2 (2019-07-28)
- Specific minimum tolerance thresholds (e.g. 1e-3 for mu updates) replaced by
global parameters (e.g. `mintol_mu`). Optional parameters; internal use only. 
Incorporated within `HiddenBASiCS_MCMC_ExtraArgs`. 
- General clean up to remove code redundancy in `BASiCS_MCMC` (WIP)