@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 1.7.1
-Date: : 2019-07-27
+Version: 1.7.2
+Date: : 2019-07-28
 Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
         email="cnvallej@uc.cl"), 
         person("Nils", "Eling", role=c("aut")), 
