@@ -1,6 +1,6 @@
 HiddenBASiCS_MCMC_ExtraArgs <- function(Data,
                                         Burn,
-                                        n,
+                                        GPar,
                                         Regression,
                                         WithSpikes,
                                         PriorDelta = c("log-normal", "gamma"),
@@ -25,7 +25,7 @@ HiddenBASiCS_MCMC_ExtraArgs <- function(Data,
                                           s2.delta = 0.5,
                                           a.delta = 1,
                                           b.delta = 1,
-                                          p.phi = rep(1, times = n),
+                                          p.phi = rep(1, times = GPar$n),
                                           a.s = 1,
                                           b.s = 1,
                                           a.theta = 1,
@@ -40,9 +40,7 @@ HiddenBASiCS_MCMC_ExtraArgs <- function(Data,
                                         mintol_delta = 1e-3,
                                         mintol_nu = 1e-5,
                                         mintol_theta = 1e-4
-)
-                                        
-{
+) {
 
   PriorDelta <- match.arg(PriorDelta)
 
@@ -69,7 +67,7 @@ HiddenBASiCS_MCMC_ExtraArgs <- function(Data,
         PriorParam$s2.delta > 0 & length(PriorParam$s2.delta) == 1 &
         PriorParam$a.delta > 0 & length(PriorParam$a.delta) == 1 &
         PriorParam$b.delta > 0 & length(PriorParam$b.delta) == 1 &
-        all(PriorParam$p.phi > 0) & length(PriorParam$p.phi) == n &
+        all(PriorParam$p.phi > 0) & length(PriorParam$p.phi) == GPar$n &
         PriorParam$a.s > 0 & length(PriorParam$a.s) == 1 &
         PriorParam$b.s > 0 & length(PriorParam$b.s) == 1 &
         PriorParam$a.theta > 0 & length(PriorParam$a.theta) == 1 &
@@ -107,6 +105,22 @@ HiddenBASiCS_MCMC_ExtraArgs <- function(Data,
      !(mintol_nu > 0) | !(mintol_theta > 0)) {
     stop("Invalid value for mintol parameters (mu, delta, nu or theta)")
   }
+  
+  # Definition of parameters that are specific to the no-spikes case
+  NoSpikesParam <- HiddenBASiCS_MCMC_NoSpikesParam(
+    GPar$BioCounts,
+    ConstrainType,
+    StochasticRef, 
+    GPar$q.bio, 
+    Start$mu0, 
+    PriorDelta, 
+    ConstrainProp)
+  ConstrainGene <- NoSpikesParam$ConstrainGene
+  NotConstrainGene <- NoSpikesParam$NotConstrainGene
+  Constrain <- NoSpikesParam$Constrain
+  RefGenes <- NoSpikesParam$RefGenes; 
+  RefGene <- NoSpikesParam$RefGene
+  Index <- seq_len(GPar$q.bio) - 1
 
  list(AR = AR, StopAdapt = StopAdapt, StoreChains = StoreChains,
       StoreAdapt = StoreAdapt, StoreDir = StoreDir,
@@ -117,5 +131,7 @@ HiddenBASiCS_MCMC_ExtraArgs <- function(Data,
       ConstrainType = ConstrainType, ConstrainProp = ConstrainProp,
       k = k, variance = variance, Start = Start,
       mintol_mu = mintol_mu, mintol_delta = mintol_delta,
-      mintol_nu = mintol_nu, mintol_theta = mintol_theta)
+      mintol_nu = mintol_nu, mintol_theta = mintol_theta,
+      ConstrainGene = ConstrainGene, NotConstrainGene = NotConstrainGene,
+      Constrain = Constrain, RefGenes = RefGenes, RefGene = RefGene, Index = Index)
 }
